environments/rt-inventory-dev/apps/app-refarch-eda-store-simulator/services/refarch-eda-store-simulator/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
    app.quarkus.io/commit-id: 0cc3c462729e0fcca9e889d0ca7907d370a7da9e
    app.quarkus.io/build-timestamp: 2021-08-27 - 02:02:54 +0000
  labels:
    app.kubernetes.io/name: store-simulator
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/part-of: app-refarch-eda-store-simulator
  name: store-simulator
  namespace: rt-inventory-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: store-simulator
      app.kubernetes.io/version: 1.0.0
      app.kubernetes.io/part-of: app-refarch-eda-store-simulator
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        app.quarkus.io/commit-id: 0cc3c462729e0fcca9e889d0ca7907d370a7da9e
        app.quarkus.io/build-timestamp: 2021-08-27 - 02:02:54 +0000
      labels:
        app.kubernetes.io/name: store-simulator
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/part-of: app-refarch-eda-store-simulator
    spec:
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          image: quay.io/boyerje/eda-store-simulator
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: store-simulator
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
          - mountPath: /deployments/certs/server
            name: kafka-cert
            readOnly: false
            subPath: ""
          - mountPath: /deployments/certs/user
            name: user-cert
            readOnly: false
            subPath: ""
      serviceAccount: store-simulator
      volumes:
      - name: kafka-cert
        secret:
          optional: true
          secretName: dev-cluster-ca-cert
      - name: user-cert
        secret:
          optional: true
          secretName: tls-user
