environments/rt-inventory-dev/apps/app-refarch-eda-store-simulator/services/refarch-eda-store-simulator/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: refarch-eda-store-simulator
  namespace: rt-inventory-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: refarch-eda-store-simulator
    weight: 100
  wildcardPolicy: None
